--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="banner">
-        <img class="logo" src="images/nethraxis twitch logo.png" alt="Nethraxis Twitch" width="1280" height="720">
-        <img class="logo" src="images/units gaming logo.png" alt="Units Gaming" width="800" height="600">
-        <img class="logo" src="images/units papers logo.png" alt="Units Papers" width="800" height="600">
+        <img class="logo" src="https://i.imgur.com/2wUBIWE.png" alt="Nethraxis Twitch" width="1280" height="720">
+        <img class="logo" src="https://i.imgur.com/nDxGxKM.png" alt="Units Gaming" width="800" height="600">
+        <img class="logo" src="https://i.imgur.com/wG5Fbxm.png" alt="Units Papers" width="800" height="600">
     </div>
 </body>
 </html>
