--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="banner">
-        <img class="logo" src="https://i.imgur.com/2wUBIWE.png" alt="Nethraxis Twitch" width="800" height="600">
-        <img class="logo" src="https://i.imgur.com/nDxGxKM.png" alt="Units Gaming" width="800" height="600">
-        <img class="logo" src="https://i.imgur.com/wG5Fbxm.png" alt="Units Papers" width="800" height="600">
+        <img class="logo" src="Images/Nethraxis Twitch Logo.png" alt="Nethraxis Twitch" width="800" height="600">
+        <img class="logo" src="Images/Units Gaming Logo.png" alt="Units Gaming" width="800" height="600">
+        <img class="logo" src="Images/Units Papers Logo.png" alt="Units Papers" width="800" height="600">
     </div>
 </body>
 </html>
